linked ships to gameboard

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="gameboard" id="gameboard-1"></div>
+    <div class="gameboard" id="gameboard-2"></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
