--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="gameboard" id="player-1-gameboard">
-      <h1 class="gameboard-title">Your board</h1>
+    <div class="gameboard" id="computer-gameboard">
+      <h1 class="gameboard-title">Computer's board</h1>
       <div class="game-tiles"></div>
     </div>
-    <div class="gameboard" id="player-2-gameboard">
-      <h1 class="gameboard-title">Computer's board</h1>
+    <div class="gameboard" id="player-gameboard">
+      <h1 class="gameboard-title">Your board</h1>
       <div class="game-tiles"></div>
     </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
-
